--- a/styles/style.css
+++ b/styles/style.css
@@ -168,6 +168,12 @@ main {
     height: 171px;
 }
 
+.body-section img{
+    width: 100%;
+    height: 95%;
+    margin-top: 50px;
+}
+
 
 .body-section-tittle {
     color: #FFF;
@@ -255,28 +261,50 @@ main {
     width: 165px;
 }
 
+/*footer*/
+footer {
+    wwidth: 1440px;
+    width: 100%;
+    height: 100px;
+    border-radius: 8px;
+    background: #FFF4E7;
+    margin: 100px auto;
+}
+
+.footer {
+    color: #424242;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 30px;
+
+}
+
 /*Responsive media query for mobile*/
 
 @media screen and (max-width: 576px) {
     .header {
         padding: 20px;
     }
+
     .nav-tittle {
         font-size: 16px;
-        font-weight:100px;
+        font-weight: 100px;
         text-align: center;
-        
+
     }
+
     .banner-tittle {
-        font-size:16px;
-        font-weight:100;
+        font-size: 16px;
+        font-weight: 100;
         text-align: center;
     }
+
     .navigation-bar {
         flex-direction: column;
     }
 
-    .navigation-bar ul{
+    .navigation-bar ul {
         flex-direction: column;
         align-items: center;
     }
@@ -351,13 +379,17 @@ main {
 
     .body-2-tittle {
         font-size: 16px;
-        font-weight:100px;
+        font-weight: 100px;
         width: 100px;
     }
+
     .body-container {
-        width:100%;
-        height:auto;
+        width: 100%;
+        height: auto;
     }
+  footer{
+    width: 100%;
+  }
 
 }
 
@@ -386,12 +418,18 @@ main {
     .sponsor-image {
         flex-direction: column;
     }
+
     .body-2 {
         flex-direction: column;
         align-items: center;
         height: 100%;
     }
-    .body-2 img{
+
+    .body-2 img {
+        width: 100%;
+    }
+
+    footer{
         width: 100%;
     }
 
